--- a/components/contact-section/contactsection.scss
+++ b/components/contact-section/contactsection.scss
@@ -1,72 +1,59 @@
 @import "../../src/main.scss";
 
 
+svg{
+    width: 1rem;
+}
+
+
 .contacts-container{
-    width: 100%;
     height: 100vh;
     background-color: var(--container-bg-color);
 
     .contacts-wrapper{
-        background-color: var(--container-bg-color);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 100%;
 
         h1{
-            font-family: var(--main-font);
-            font-weight: 500;
-            color: var(--white);
+            font-family: var(--primary-font);
             text-align: center;
-            margin-bottom: 4rem;
+            color: var(--primary-color);
+            margin-bottom: 3rem;
         }
-
+        
         .contacts-card{
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-wrap: wrap;
+            flex-flow: column;
+            width: max-content;
 
-            @include tablet{
-                width: 60vw;
+            @include tabletMedium {
+                flex-direction: row;
+                gap: 15rem;
             }
 
-            div{
-                flex: 1;    
+            ul{
                 display: flex;
                 justify-content: center;
-                align-items: center;
-                flex-wrap: wrap;
-                width: 35vw;
+                align-items: baseline;
+                flex-direction: column;
+                width: 100%;
 
-                ul{
-                    display: flex;
-                    justify-content: center;
-                    align-items: baseline;
-                    flex-direction: column;
+                li{
+                    margin-block: 1.5rem;
 
-                    @include mobile{
-                        align-items: center;
-                        width: 60vw;
-                    }
-
-                    li{
+                    a{
                         display: flex;
                         justify-content: center;
                         align-items: center;
-                        height: 5rem;
-
-                        @include tablet{
-                            height: 4rem;
-                            margin-left: 0;
-                        }
-
-                        a{
-                            display: flex;
-                            gap: 1rem;
-                        }
+                        gap: 1rem;
                     }
                 }
-
             }
-
-            
         }
     }
 }
