--- a/pages/landingPage/landingPage.scss
+++ b/pages/landingPage/landingPage.scss
@@ -6,6 +6,7 @@
     align-items: center;
     flex-direction: column;
     height: 100vh;
+    background-color: var(--container-bg-color-dark);
 
     #main-logo{
         fill: var(--primary-color);
