--- a/pages/landingPage/landingPage.scss
+++ b/pages/landingPage/landingPage.scss
@@ -1,11 +1,19 @@
 @import "../../src/main.scss";
 
+.wrapper-reveal{
+    display: flex;
+    overflow: hidden;
+    flex-wrap: nowrap;
+    
+}
+
 .landing-page-container{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     height: 100vh;
+    width: 100vw;
     background-color: var(--container-bg-color-dark);
 
     #main-logo{
